# repo-evaluate

./: .gitignore  LICENSE.md  README.md  build.py  code_quality.py  constants.py  continuous_integration.py  contributing.py  csvcreator.py  features.py  grades.py  licence.py  licence_scraper.py  main.py  pyproject.toml  readme.py  search.py  testing.py
.github/ISSUE_TEMPLATE/: config.yml
docs/: CODE_OF_CONDUCT.md  LICENSE.md  README.md  SECURITY.md  test_repositories.txt
repo_evaluate/: api.py  build.py  code_quality.py  constants.py  continuous_integration.py  contributing_scraper.py  csvcreator.py  features.py  grades.py  licence_scraper.py  main.py  readme_scraper.py  search.py  testing.py
repo_evaluate/resources/: GitHub Repositories.txt
resources/: GitHub Repositories.txt
results/EleniVasilaki/Social-Network/: results.txt
